@@ -512,7 +512,7 @@ namespace {
 				m_file_piece_hash[i].resize(std::size_t(m_files.file_num_pieces(i)));
 		}
 
-		boost::shared_array<char> const info = ti.metadata();
+		std::shared_ptr<char[]> const info = ti.metadata();
 		int const size = ti.metadata_size();
 		m_info_dict.preformatted().assign(&info[0], &info[0] + size);
 	}
